<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tennv"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>
        <EditText
            style="@style/input"
            android:id="@+id/editTenNV"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manv"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>
        <EditText
            style="@style/input"
            android:id="@+id/editMaNV"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gt"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                style="@style/rbt"
                android:id="@+id/rbtNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/nu"
                android:textSize="20dp"/>
            <RadioButton
                style="@style/rbt"
                android:id="@+id/rbtNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/nam"
                android:textSize="20dp"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnNhapNV"
        style="@style/nhap"
        android:layout_width="300dp"
        android:layout_height="50dp"/>

    <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DSNV"
        android:textSize="30dp"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>